# rust-sa

./: .gitignore  Makefile  README.md  devo.yaml  flake.nix
.github/workflows/: submit.yml
frontend/: .cta.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  Makefile  README.md  codegen.ts  knip.json  package-lock.json  package.json  pnpm-lock.yaml  schema.graphql  vite.config.ts
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: brand-mark.tsx  comment-composer.tsx  comment-thread.tsx  diff-view-height.test.ts  diff-view-height.ts  diff-view.tsx  file-tree-view.tsx  folder-picker.tsx  github-link.tsx  graph-column.tsx  graph-ref-section.tsx  graph-special.tsx  help-sheet.tsx  live-toast.tsx  top-bar.tsx  url-bar.tsx
frontend/src/components/ui/: button.tsx  kbd.tsx  resize-handle.tsx  segmented.tsx  sheet.tsx  tag.tsx  viewed-check.tsx
frontend/src/graphql/operations/: compare.graphql  graph.graphql
frontend/src/lib/: a11y-patches.ts  apollo.ts  blob-cache.ts  comments.ts  deep-active-input.ts  diff-api.ts  git-graph.ts  highlight.ts  keybindings.ts  observer-pool.ts  parse-patch.ts  preference.ts  server-origin.ts  server-preference.ts  short-sha.ts  sse.ts  viewed.ts
frontend/src/routes/: __root.tsx  browse.tsx  compare.$.tsx  design.tsx  diff.tsx  graph.tsx  health.tsx  index.tsx  preference.tsx
src-tauri/: Cargo.toml  Makefile  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  server.rs
